[gd_scene load_steps=15 format=3 uid="uid://cbjr3pu0m2hjr"]

[ext_resource type="Script" path="res://Scripts/Enemy_Scripts/xantarian_skimmer.gd" id="1_6heu5"]
[ext_resource type="Texture2D" uid="uid://dlkx0xpvr6v04" path="res://Assets/Game Assets/Enemy/Xantarian Skimmer.png" id="2_uy5wo"]
[ext_resource type="Texture2D" uid="uid://bqbj86ym8v10a" path="res://Assets/Game Assets/Misc/Explosion Asset.png" id="3_2c57r"]
[ext_resource type="Texture2D" uid="uid://cfo6ws20ogdmq" path="res://Assets/Game Assets/Enemy/NEW Enemy Thruster.png" id="4_lyrwt"]
[ext_resource type="AudioStream" uid="uid://4qlvb2cikwrj" path="res://Assets/Game Assets/Sound Effects/488294__combine2005__explosionretro.wav" id="5_72484"]
[ext_resource type="AudioStream" uid="uid://dta4wxk6481ck" path="res://Assets/Game Assets/Sound Effects/151025__bubaproducer__laser-shot-small-1 (1).wav" id="6_reqd8"]

[sub_resource type="Animation" id="Animation_e4ekv"]
resource_name = "Explosion"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Explosion:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(36.7583, 1, 1, 1, 1, 1, 1, 1, 11.3137),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_4g1oe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ship:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_uy5wo")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Explosion:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Explosion:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Explosion:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_76734"]
resource_name = "Ship"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ship:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("2_uy5wo"), ExtResource("2_uy5wo")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ri1t"]
_data = {
"Explosion": SubResource("Animation_e4ekv"),
"RESET": SubResource("Animation_4g1oe"),
"Ship": SubResource("Animation_76734")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ljk5b"]
radius = 33.0
height = 104.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ul3sp"]
atlas = ExtResource("4_lyrwt")
region = Rect2(0, 0, 128, 408)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fbbk"]
atlas = ExtResource("4_lyrwt")
region = Rect2(128, 0, 128, 408)

[sub_resource type="SpriteFrames" id="SpriteFrames_7oxdg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ul3sp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fbbk")
}],
"loop": true,
"name": &"Thrusters",
"speed": 6.0
}]

[node name="Xantarian Skimmer" type="Area2D"]
collision_layer = 2
collision_mask = 133
script = ExtResource("1_6heu5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ri1t")
}
autoplay = "Ship"

[node name="Explosion" type="Sprite2D" parent="."]
visible = false
position = Vector2(1.19209e-07, 9.09495e-13)
scale = Vector2(0.7, 0.7)
texture = ExtResource("3_2c57r")
hframes = 3
vframes = 3

[node name="Ship" type="Sprite2D" parent="."]
position = Vector2(-7.56979e-06, -5.00001)
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_uy5wo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_ljk5b")

[node name="EnemyThrusters" type="Node2D" parent="."]

[node name="EnemyThruster" type="AnimatedSprite2D" parent="EnemyThrusters"]
position = Vector2(12.5, -82.5938)
scale = Vector2(0.195312, 0.195312)
sprite_frames = SubResource("SpriteFrames_7oxdg")
animation = &"Thrusters"
autoplay = "Thrusters"
frame_progress = 0.158074

[node name="EnemyThruster2" type="AnimatedSprite2D" parent="EnemyThrusters"]
position = Vector2(-12.5, -82.5938)
scale = Vector2(0.195312, 0.195312)
sprite_frames = SubResource("SpriteFrames_7oxdg")
animation = &"Thrusters"
autoplay = "Thrusters"
frame_progress = 0.158074

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-9.53674e-07, -96)
scale = Vector2(2.2, 1)

[node name="pewpew1" type="Marker2D" parent="."]
position = Vector2(21, 27)

[node name="pewpew2" type="Marker2D" parent="."]
position = Vector2(-21, 27)

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="Explosion_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_72484")
volume_db = -10.0

[node name="Shoot_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_reqd8")
volume_db = -10.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
